Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

15-Feb-2011 Jean-Marie Simonet
 $# [#24897] Untranslated strings TPL_BEEZ5_ISCLOSED and TPL_BEEZ5_LOGO. Thanks Serge.

13-Feb-2011 Jean-Marie Simonet
 $ [#24874] Change "Templates Manager" to "Template Manager". Thanks Mark.

12-Feb-2011 Christophe Demko
 # [#24873] Extra div element in Category List for unpublished articles (Mark Dexter)

11-Feb-2011 Jean-Marie Simonet
 # [#24833] Debug position in beez 20 template doesn't work.
 #$ Normalizing fieldset label

10-Feb-2011 Mark Dexter
 # [#24322] *Submitting two articles in the same category with the same title but different aliases doesn't work on frontend

10-Feb-2011 Christophe Demko
 # [#24446] *Contacts Category model tries to load params from menu even if no Itemid is set (Jean-Marie Simonet, Jeremy Wilken)
 # [#24417] Clicks on a custom banner are not counted (bill richardson)
 # [#24833] Debug position in beez 20 template doesn't work. (Jean-Marie Simonet)
 # [#24830] Typo in media/media/css/popup-imagelist.css (wrong color value for background) (Peter Chovancak)
 # [#24707] new user group assignement doesn't work (Andrea Tarr)
 # [#24840] *Redundant call to load language in tinymce causes lang load issue (Samuel Moffatt, Jean-Marie Simonet)

10-Feb-2011 Jean-Marie Simonet
 #$ [#24776] *Weblinks icon hardcoded
 # [#24423] JHtml select.radiolist produces unnecessary label class suffix. Thanks Nikolai.
 # [#24372] plg_user_profile "Website" field XSS. Thanks Rouven and Christophe.
 # [#24790] Remove the border attribute. Thanks Rouven.
 # [#24837] [#24767] *Detect browser lang and cookie broken when using languagefilter. Thanks Christophe.
 # [#24831] *Accommodating longer strings in bluestork page title. Thanks Christophe and Andrea.

09-Feb-2011 Jean-Marie Simonet