@@ -8,12 +8,4 @@
 			<![CDATA[COM_USER_REMIND_VIEW_DEFAULT_DESC]]>
 		</message>
 	</layout>
-
-	<!-- Add fields to the parameters object for the layout. -->
-	<fields name="params">
-
-		<!-- Basic options. -->
-		<fieldset name="basic" label="COM_MENUS_BASIC_FIELDSET_LABEL">
-		</fieldset>
-	</fields>
 </metadata>
